force-app/main/default/objects/Zco_Safety_Setting__mdt/Zco_Safety_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Zco Safety Setting</label>
    <pluralLabel>Zco Safety Settings</pluralLabel>
</CustomObject>