force-app/main/default/objects/Zco_Safety_Setting__mdt/fields/Ack_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Ack_Minutes__c</fullName>
    <label>Acknowledgement Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>