force-app/main/default/objects/Zco_Safety_Setting__mdt/fields/Bot_Pause_Hours__c.field-meta.xml
<CustomField>
    <fullName>Bot_Pause_Hours__c</fullName>
    <label>Bot Pause Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>