force-app/main/default/objects/Zco_Safety_Setting__mdt/fields/Dedupe_Window_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Window_Minutes__c</fullName>
    <label>Dedupe Window Minutes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>