force-app/main/default/objects/Zco_Safety_Setting__mdt/fields/Notify_Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Notify_Caregiver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Caregiver</label>
    <type>Checkbox</type>
</CustomField>