force-app/main/default/objects/Zco_Safety_Setting__mdt/fields/Safety_Queue__c.field-meta.xml
<CustomField>
    <fullName>Safety_Queue__c</fullName>
    <label>Safety Queue</label>
    <length>80</length>
    <type>Text</type>
</CustomField>