force-app/main/default/objects/Zco_Safety_Setting__mdt/fields/Safety_Template_Key__c.field-meta.xml
<CustomField>
    <fullName>Safety_Template_Key__c</fullName>
    <label>Safety Template Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>